gogs-deployment-manifests/gogs/03_route_gogs.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gogs
  name: gogs
  #namespace: gogs-test
spec:
  host: gogs.apps.docp4.lab.bcnconsulting.com
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: gogs
    weight: 100
  wildcardPolicy: None
  ...
